--- a/css/首页动画.css
+++ b/css/首页动画.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: "bit_font";
+    src: url(../fonts/8bittype.ttf);
+}
+
 html,
 body {
     width: 100%;
@@ -12,28 +17,84 @@ body {
     overflow: hidden;
 }
 
+#back1 {
+    position: absolute;
+    left: 5%;
+    top: 8%;
+    width: 20%;
+    height: 10%;
+    background-image: url(../img/logo2.png);
+    background-position: center;
+    background-size: 100% 100%;
+    z-index: -1;
+    opacity: 2;
+    image-rendering: pixelated;
+    opacity: 1;
+}
+
+#back2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    z-index: -2;
+    image-rendering: pixelated;
+}
+
+.back_wrap {
+    width: 200%;
+    height: 100%;
+    position: relative;
+    animation: run_back 3s linear infinite;
+}
+
+@keyframes run_back {
+    from {
+        left: 0;
+    }
+    to {
+        left: -100%;
+    }
+}
+
+.back_wrap div {
+    float: left;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url(../img/stars.png);
+    background-repeat: inherit;
+    background-size: 50% 50%;
+}
+
 #title1 {
     position: absolute;
     height: 50px;
     width: 1000px;
-    left: 27.5%;
+    left: 18%;
     bottom: 45%;
     z-index: 1;
     font-size: 36px;
     font-weight: 700;
     opacity: 0;
+    color: white;
+    text-shadow: 5px 5px 2px black;
+    font-family: "bit_font";
 }
 
 #title2 {
     position: absolute;
     height: 50px;
     width: 1000px;
-    left: 37.5%;
+    left: 32.5%;
     bottom: 30%;
     z-index: 1;
     font-size: 36px;
     font-weight: 700;
     opacity: 0;
+    color: white;
+    text-shadow: 5px 5px 2px black;
+    font-family: "bit_font";
 }
 
 .logo_set {
@@ -69,7 +130,7 @@ body {
     top: calc(50% - 150px);
     left: calc(50% - 120px);
     background-color: skyblue;
-    border: 5px solid rgb(0, 0, 0);
+    border: 5px solid white;
     border-radius: 5px;
     text-align: center;
     opacity: 0;
