--- a/css/首页动画.css
+++ b/css/首页动画.css
@@ -157,43 +157,38 @@ a:hover {
 }
 
 .index_outer {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.index_outer div {
     position: absolute;
+    z-index: 1;
 }
 
-.index_outer div:nth-child(1) {
+#index_outer1 {
     top: -100%;
     left: 0;
-    width: 50px;
+    width: 3%;
     height: 100%;
     background-color: red;
 }
 
-.index_outer div:nth-child(2) {
+#index_outer2 {
     top: 100%;
     right: 0;
-    width: 50px;
+    width: 3%;
     height: 100%;
     background-color: green;
 }
 
-.index_outer div:nth-child(3) {
+#index_outer3 {
     right: 100%;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 5%;
     background-color: blue;
 }
 
-.index_outer div:nth-child(4) {
+#index_outer4 {
     right: -100%;
     top: 0;
     width: 100%;
-    height: 50px;
+    height: 5%;
     background-color: yellow;
 }
