--- a/css/首页动画.css
+++ b/css/首页动画.css
@@ -12,8 +12,8 @@ html,
 body {
     width: 1366px;
     height: 700px;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 auto;
     overflow: hidden;
 }
 
@@ -34,6 +34,7 @@ body {
 
 #back2 {
     position: absolute;
+    left: 0;
     width: 100%;
     height: 100%;
     background-position: center;
