--- a/css/首页动画.css
+++ b/css/首页动画.css
@@ -8,7 +8,6 @@
     src: url(../fonts/8bittype.ttf);
 }
 
-html,
 body {
     width: 1366px;
     height: 700px;
@@ -103,6 +102,7 @@ body {
     left: 5%;
     bottom: -20%;
     z-index: -1;
+    opacity: 0;
 }
 
 .logo_set img {
